[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benq"
version = "0.1.0"
authors = [
    {name = "Benjamin Team", email = "benjamin@example.com"},
]
description = "An AI-oriented quantitative investment platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.17.4",
    "pandas>=1.0.0",
    "scipy>=1.4.0",
    "scikit-learn>=0.23.0",
    "torch>=1.6.0",
    "tqdm>=4.50.0",
    "pyyaml>=5.3.0",
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
]
rl = [
    "stable-baselines3>=1.0.0",
    "gym>=0.17.0",
]
full = [
    "lightgbm>=3.0.0",
    "xgboost>=1.3.0",
    "catboost>=0.24.0",
    "tensorflow>=2.4.0",
    "transformers>=4.0.0",
]

[project.scripts]
benbenq = "benq.cli.run:main"

[project.urls]
"Homepage" = "https://github.com/Soros2040/benjamin-fin-space-app"
"Bug Tracker" = "https://github.com/Soros2040/benjamin-fin-space-app/issues"
"Documentation" = "https://benq.readthedocs.io/"
